# unine-twine

./: .gitmodules  LICENSE  README.md
benchmarks/: .gitignore  .gitmodules  README.md  benchmark_build_docker.sh  benchmark_run_baremetal.sh  common.sh  common_build_docker.sh  cost-factors_build_docker.sh  cost-factors_run_baremetal.sh  polybench_build_docker.sh  polybench_run_baremetal.sh  profiling_build_docker.sh  profiling_run_baremetal.sh  speedtest1_build_docker.sh  speedtest1_run_baremetal.sh
benchmarks/crypto/: Dockerfile  benchmark.sh  build-native-sgx.sh  build-wasm.sh  build.sh  common.mk
benchmarks/crypto/native/: Makefile  main.c
benchmarks/crypto/native-sgx/: .gitignore  Dockerfile  run-benchmark.sh
benchmarks/crypto/results/: wolfssl_crypto_analysis.ipynb
benchmarks/crypto/wasm/: Makefile
benchmarks/linux-sgx/: .gitignore  Dockerfile  build.sh
benchmarks/linux-sgx/common/inc/: benchmark_tprotected_fs.h  sgx_tprotected_fs.edl
benchmarks/polybench/: Dockerfile  benchmark.sh  build-native.sh  build-nodejs.sh  build.sh
benchmarks/polybench/benchmark-sgx-nodejs/: index.js  run-benchmark.sh
benchmarks/polybench/benchmark-wasm/: .gitignore  CMakeLists.txt
benchmarks/polybench/benchmark-wasm-sgx/: .gitignore  CMakeLists.txt  build-benchmark.sh
benchmarks/polybench/benchmark-wasm/src/: main.c
benchmarks/polybench/perf-l1-instructions-cache-missed/: .gitignore copy  benchmark.sh  build-wasm.sh  build.sh  record.sh  report.sh
benchmarks/polybench/perf-l1-instructions-cache-missed/benchmark-sgx-nodejs/: Dockerfile
benchmarks/polybench/perf-l1-instructions-cache-missed/results/: .gitignore  launch.sh  polybench_analysis.ipynb
benchmarks/polybench/results/: polybench_analysis.ipynb
benchmarks/runtime/: Dockerfile  build.sh
benchmarks/sgx-lkl/: README.md
benchmarks/speedtest1/: Dockerfile  benchmark.sh  build-native.sh  build-wasm.sh  build.sh
benchmarks/speedtest1/benchmark/: CMakeLists.txt
benchmarks/speedtest1/benchmark-native/: CMakeLists.txt
benchmarks/speedtest1/benchmark-native/src/: main.c
benchmarks/speedtest1/benchmark-sgx/: .gitignore  CMakeLists.txt  Dockerfile  build-benchmark.sh  enclave_config.json  install-sgx-lkl.sh  run-benchmark.sh
benchmarks/speedtest1/benchmark-wasm/: CMakeLists.txt  build-benchmark.sh  build-wasm.sh
benchmarks/speedtest1/benchmark-wasm-sgx/: .gitignore  CMakeLists.txt  build-benchmark.sh  build-wasm.sh
benchmarks/speedtest1/benchmark-wasm-sgx/src/: Makefile
benchmarks/speedtest1/benchmark-wasm/src/: main.c
benchmarks/speedtest1/benchmark/include/: speedtest1.h
benchmarks/speedtest1/benchmark/src/: main.c  speedtest1.c
benchmarks/speedtest1/results/: speedtest1_analysis.ipynb
benchmarks/sqlite/: Dockerfile  benchmark.sh  build-wasm.sh  build.sh  profile_all_values.sh  profile_single_value.sh
benchmarks/sqlite/benchmark/: CMakeLists.txt
benchmarks/sqlite/benchmark-native/: CMakeLists.txt
benchmarks/sqlite/benchmark-native/src/: main.c
benchmarks/sqlite/benchmark-sgx/: .gitignore  Dockerfile  build-benchmark.sh  enclave_config.json  run-benchmark.sh
benchmarks/sqlite/benchmark-sgx/src/: main.c
benchmarks/sqlite/benchmark-wasm/: CMakeLists.txt  build-wasm.sh
benchmarks/sqlite/benchmark-wasm-sgx/: CMakeLists.txt  build-benchmark.sh  build-wasm.sh
benchmarks/sqlite/benchmark-wasm-sgx-official/: CMakeLists.txt  build-benchmark.sh  build-wasm.sh
benchmarks/sqlite/benchmark-wasm-sgx-official/src/: .gitignore  Makefile
benchmarks/sqlite/benchmark-wasm-sgx/src/: Makefile
benchmarks/sqlite/benchmark-wasm/src/: main.c
benchmarks/sqlite/benchmark-wasm/src-wasm/: main.c
benchmarks/sqlite/benchmark/include/: benchmark.h  benchmark_types.h  random.h
benchmarks/sqlite/benchmark/src/: benchmark.c  main.c  random.c
benchmarks/sqlite/cost-factors/: all.sh  compilation.sh  launch-time-build.sh  launch-time-run.sh  optimization.sh  resident-memory-build.sh  resident-memory-run.sh  size.sh
benchmarks/sqlite/cost-factors/compilations/: native-cleanup.sh  native.sh  wasm-bin-cleanup.sh  wasm-bin.sh  wasm-cleanup.sh  wasm-sgx-bin-cleanup.sh  wasm-sgx-bin.sh  wasm.sh
benchmarks/sqlite/cost-factors/launch-time/: time_estimation.py
benchmarks/sqlite/cost-factors/launch-time/native/: CMakeLists.txt  build.sh  run.sh
benchmarks/sqlite/cost-factors/optimizations/: sgx-disk-image-cleanup.sh  sgx-disk-image.sh  wasm-aot-cleanup.sh  wasm-aot.sh
benchmarks/sqlite/cost-factors/results/: .gitignore  cost-factors_analysis.ipynb
benchmarks/sqlite/cost-factors/sizes/: native.sh  sgx-disk-image.sh  sgx-lkl-bin.sh  sgx-lkl-enclave.sh  wasm-aot.sh  wasm-bin.sh  wasm-sgx-bin.sh  wasm-sgx-enclave.sh  wasm.sh
benchmarks/sqlite/instrumentation-callbacks/include/: instrumentation_callbacks.h
benchmarks/sqlite/instrumentation-callbacks/src/: launch_time_callbacks.c  memory_callbacks.c  memory_callbacks_external.c  timing_callbacks.c
benchmarks/sqlite/results/: .gitignore  benchmark_analysis.ipynb  profiling_analysis.ipynb
benchmarks/tls/: Dockerfile  benchmark.sh  build-client.sh  build-native-sgx.sh  build-native.sh  build.sh  common.mk
benchmarks/tls/client/: .gitignore  Makefile  client-tls-perf.c
benchmarks/tls/native/: Makefile  server-tls-poll-perf.c
benchmarks/tls/native-sgx/: .gitignore  Dockerfile  enclave_config.json  run-benchmark.sh  sgx-lkl-setup.sh
benchmarks/tls/results/: launch.sh  wolfssl_tls_analysis.ipynb
benchmarks/tls/wasm/: Makefile
runtime/: README.md
runtime/build-scripts/: config_common.cmake
runtime/core/iwasm/common/: wasm_runtime_common.h
runtime/core/iwasm/include/: libc_wasi_benchmark.h
runtime/core/iwasm/interpreter/: wasm_loader.c
runtime/product-mini/app-samples/file-system-interaction/: main.c
runtime/product-mini/app-samples/hello-world/: build_libc-wasi.sh
runtime/samples/sqlite/: CMakeLists.txt  README.md  build.sh  run.sh
runtime/samples/sqlite/shared/: native_api.h
runtime/samples/sqlite/src/: main.c
runtime/sgx/: core.edl  wasi.edl
runtime/wamr-compiler/: CMakeLists.txt  build_llvm.sh
(+86 files in other folders)
